fixed spacing

--- a/resources/style/landings/pages/home/_availableCards.scss
+++ b/resources/style/landings/pages/home/_availableCards.scss
@@ -12,10 +12,11 @@
 }
 
 .Home-availableCardsColumn {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
     width: 25%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
     @media screen and (max-width: 768px) {
         width: 50%;
     }
